--- a/ai_team1/what_is_it.html
+++ b/ai_team1/what_is_it.html
@@ -1,4 +1,3 @@
-    
 <html>
   <head>
     <title>What is it?</title>
@@ -14,7 +13,7 @@
       <a href="../encryption_poc/index.html">Encryption</a>
       <a href="index.html">AI</a>
     </div>
-    <div class="parallax">
+    <div class="parallax2">
       <h1 class="BIGTITLE">What is it?</h1>
     </div>
     <p class="NORMALTEXT">Artificial intelligence or machine intelligence (AI or MI) is intelligence shown by machines, opposed to the natural intelligence (NI) of humans and animals.It's an area of computer science that works  on the creation of intelligent machines. It has become an essential part of the technology industry.</p>
