--- a/ai_team1/history.html
+++ b/ai_team1/history.html
@@ -13,7 +13,7 @@
       <a href="../encryption_poc/index.html">Encryption</a>
       <a href="index.html">AI</a>
     </div>
-    <div class="parallax">
+    <div class="parallax3">
       <h1 class="BIGTITLE">History</h1>
     </div>
     <p class="NORMALTEXT"></p>
