--- a/ai_team1/sources.html
+++ b/ai_team1/sources.html
@@ -13,7 +13,7 @@
       <a href="../encryption_poc/index.html">Encryption</a>
       <a href="index.html">AI</a>
     </div>
-    <div class="parallax">
+    <div class="parallax4">
       <h1 class="BIGTITLE">Sources</h1>
     </div>
     <ul class="NORMALTEXT">
