--- a/ai_team1/what_is_it.html
+++ b/ai_team1/what_is_it.html
@@ -25,9 +25,7 @@
       <li>Problem solving</li>
     </ul>
     <h2 class="QUOTE">"A computer would deserve to be called intelligent if it could deceive a human into believing that it was human." - Alan Turing.</h2>
-    <p></p>
-    <p></p>
-    
+    <p><br>To conclude, AI is an area of computer science which tries to replicate human inteligence</p>
  <div class="footer">
    <p></p>
     </div>
