--- a/ai_team1/history.html
+++ b/ai_team1/history.html
@@ -16,7 +16,7 @@
     <div class="parallax3">
       <h1 class="BIGTITLE">History</h1>
     </div>
-    <p class="NORMALTEXT">AI began with "an ancient wish to forge the gods." - Pamela McCorduck</p>
+    <p class="QUOTE">AI began with "an ancient wish to forge the gods." - Pamela McCorduck</p>
  <div class="footer">
    <p></p>
     </div>
