--- a/ai_team1/history.html
+++ b/ai_team1/history.html
@@ -17,6 +17,9 @@
       <h1 class="BIGTITLE">History</h1>
     </div>
     <p class="QUOTE"><br>AI began with "an ancient wish to forge the gods." - Pamela McCorduck</p>
+    <p class="NORMALTEXT">AI is a concept and it is hard to determine who first thought of it.
+    But if someone asked, the least wrong answer would be that it came from Greek mythology.
+    <br></p>
  <div class="footer">
    <p></p>
     </div>
