--- a/ai_team1/history.html
+++ b/ai_team1/history.html
@@ -19,7 +19,14 @@
     <p class="QUOTE"><br>AI began with "an ancient wish to forge the gods." - Pamela McCorduck</p>
     <p class="NORMALTEXT">AI is a concept and it is hard to determine who first thought of it.
     But if someone asked, the least wrong answer would be that it came from Greek mythology.
-    <br></p>
+    <br>In Greek myths it's possible to find stories about intelligent artefacts such as the Greek myths of: Hephaestus, the blacksmith who manufactured mechanical servants, and Talos the bronze man.
+    <br>Apart from that, AI was present in history on many other occassions:</p>
+    <ul class="NORMALTEXT">
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+    </ul>
  <div class="footer">
    <p></p>
     </div>
