--- a/ai_team1/what_is_it.html
+++ b/ai_team1/what_is_it.html
@@ -16,16 +16,26 @@
     <div class="parallax2">
       <h1 class="BIGTITLE">What is it?</h1>
     </div>
+    <h2 class="QUOTE">"A computer would deserve to be called intelligent if it could deceive a human into believing that it was human." - Alan Turing.</h2>
     <p class="NORMALTEXT">Artificial intelligence or machine intelligence (AI or MI) is intelligence shown by machines, opposed to the natural intelligence (NI) of humans and animals.It's an area of computer science that works  on the creation of intelligent machines. It has become an essential part of the technology industry.</p>
-<p class="NORMALTEXT">Some of the activities computers with artificial intelligence are designed for include:</p>
+    <p class="NORMALTEXT"><br>In AI, the core parts are:
+    <ul class="NORMALTEXT">
+      <li>Knowledge engineering-To react in ways that are similar to humans, machines need a lot of information. They need to have access to objects</li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+    </ul>
+    <br><br></p>
+    <p class="NORMALTEXT">Some of the activities computers with artificial intelligence are designed for include:</p>
     <ul class="NORMALTEXT">
       <li>Speech recognition</li>
       <li>Learning</li>
       <li>Planning</li>
       <li>Problem solving</li>
     </ul>
-    <h2 class="QUOTE">"A computer would deserve to be called intelligent if it could deceive a human into believing that it was human." - Alan Turing.</h2>
-    <p class="NORMALTEXT"><br>To conclude, AI is an area of computer science which tries to replicate human inteligence.<br><br></p>
  <div class="footer">
    <p></p>
     </div>
