--- a/ai_team1/what_is_it.html
+++ b/ai_team1/what_is_it.html
@@ -20,7 +20,7 @@
     <p class="NORMALTEXT">Artificial intelligence or machine intelligence (AI or MI) is intelligence shown by machines, opposed to the natural intelligence (NI) of humans and animals.It's an area of computer science that works  on the creation of intelligent machines. It has become an essential part of the technology industry.</p>
     <p class="NORMALTEXT"><br>In AI, the core parts are:
     <ul class="NORMALTEXT">
-      <li>Knowledge engineering-To react in ways that are similar to humans, machines need a lot of information. They need to have access to objects</li>
+      <li>Knowledge engineering-To react in ways that are similar to humans, machines need a lot of information. They need to have access to objects and observe various real life situations to initiate common sense, reasoning and problem-solving.</li>
       <li></li>
       <li></li>
       <li></li>
