--- a/ai_team1/history.html
+++ b/ai_team1/history.html
@@ -20,7 +20,7 @@
     <p class="NORMALTEXT">AI is a concept and it is hard to determine who first thought of it.
     But if someone asked, the least wrong answer would be that it came from Greek mythology.
     <br>In Greek myths it's possible to find stories about intelligent artefacts such as the Greek myths of: Hephaestus, the blacksmith who manufactured mechanical servants, and Talos the bronze man.
-    <br>Apart from that, AI was present in history on many other occassions:</p>
+    <br>Apart from that, AI was present in history on many other occasions:</p>
     <p class="NORMALTEXT"><b>(Taken from <a href="https://aitopics.org/misc/brief-history">AITopics</a>)</b></p>
     
     <p class="NORMALTEXT">4th century B.C.</p>
