--- a/ai_team1/what_is_it.html
+++ b/ai_team1/what_is_it.html
@@ -21,7 +21,7 @@
     <p class="NORMALTEXT"><br>In AI, the core parts are:
     <ul class="NORMALTEXT">
       <li>Knowledge engineering-To react in ways that are similar to humans, machines need a lot of information. They need to have access to objects and observe various real life situations to initiate common sense, reasoning and problem-solving.</li>
-      <li></li>
+      <li>Machine learning-A machine needs to learn in order do develop, and there are two ways of doing so. Learning without supervision which means the machine needs to identify patterns of inputs. Or learning with supervision. This process involves classification, knowing in which category an objet belongs, and regressions, "obtaining a set of numerical input or output examples, thereby discovering functions enabling the generation of suitable outputs from respective inputs"</li>
       <li></li>
       <li></li>
       <li></li>
