--- a/ai_team1/sources.html
+++ b/ai_team1/sources.html
@@ -39,8 +39,7 @@
       <li><a href="https://en.wikipedia.org/wiki/History_of_artificial_intelligence">Wikipedia (History)</li>
       <li><a href="https://aitopics.org/">AITopics</li>
       <li><a href="https://codepen.io/GRSimon/pen/vbFle/">Sound</li>
-      <li><a href=""></li>
-      <li><a href=""></li>
+      <li><a href="https://www.youtube.com/audiolibrary/music">Music</li>
     </ul>
  <div class="footer">
    <p></p>
