--- a/ai_team1/what_is_it.html
+++ b/ai_team1/what_is_it.html
@@ -38,11 +38,11 @@
       <li>Knowledge engineering-To react in ways that are similar to humans, machines need a lot of information. They need to have access to objects and observe various real life situations to initiate common sense, reasoning and problem-solving.</li>
       <li>Machine learning-A machine needs to learn in order do develop, and there are two ways of doing so. Learning without supervision which means the machine needs to identify patterns of inputs. Or learning with supervision. This process involves classification, knowing in which category an objet belongs, and regressions, "obtaining a set of numerical input or output examples, thereby discovering functions enabling the generation of suitable outputs from respective inputs"</li>
       <li>Machine Perception-Simply put it's the skill to use sensory inputs to understant the different aspect of objects and the world in general</li>
-      <li>Robotics-</li>
-      <li></li>
-      <li></li>
-      <li></li>
+      <li>Robotics-Robots need to be able to handle tasks, manipulating objets and travelling. Robotics is the one that takes care of that.</li>
     </ul>
+    <br>
+    Fun Fact: Due to technological advancements, a phenomenon known as the AI effect was created. This means that the more AIs' are able to do and less tasks are being considered as requiring "intelligence".
+    <br>From an extreme point of view, "AI is whatever hasn't been done yet".
     <br><br></p>
     <p class="NORMALTEXT">Some of the activities computers with artificial intelligence are designed for include:</p>
     <ul class="NORMALTEXT">
