--- a/ai_team1/what_is_it.html
+++ b/ai_team1/what_is_it.html
@@ -40,8 +40,7 @@
       <li>Machine Perception-Simply put it's the skill to use sensory inputs to understant the different aspect of objects and the world in general</li>
       <li>Robotics-Robots need to be able to handle tasks, manipulating objets and travelling. Robotics is the one that takes care of that.</li>
     </ul>
-    <br>
-    Fun Fact: Due to technological advancements, a phenomenon known as the AI effect was created. This means that the more AIs' are able to do and less tasks are being considered as requiring "intelligence".
+    <p class="NORMALTEXT"><br>Fun Fact: Due to technological advancements, a phenomenon known as the AI effect was created. This means that the more AIs' are able to do and less tasks are being considered as requiring "intelligence".
     <br>From an extreme point of view, "AI is whatever hasn't been done yet".
     <br><br></p>
     <p class="NORMALTEXT">Some of the activities computers with artificial intelligence are designed for include:</p>
