--- a/ai_team1/history.html
+++ b/ai_team1/history.html
@@ -4,6 +4,21 @@
     <link rel="stylesheet" type="text/css" href="style_AI.css">
   </head>
   <body>
+        <!--Taken from web, license in main folder -->
+
+    <div class="speaker"></div>
+
+<audio id="player">
+
+    <source src="https://eursc-my.sharepoint.com/personal/diasnu_student_eursc_eu/Documents/No_Good_Right.mp3" type="audio/mp3" />
+
+</audio>
+
+  <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+
+    <script  src="js/index.js"></script>
+
+    <!--Self made from now on -->
     <div id="navbar">
       <a href="../index.html">Home</a>
       <a href="../example/index.html">Example</a>
