--- a/ai_team1/index.html
+++ b/ai_team1/index.html
@@ -7,7 +7,7 @@
     <!--Taken from web, license in main folder -->
     <div class="speaker"></div>
 <audio id="player">
-    <source src="https://www.dropbox.com/s/p1d0ywvez1sn8jw/No_Good_Right.mp3?dl=0" />
+    <source src="No_Good_Right.mp3" />
 </audio>
   <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
     <script  src="js/index.js"></script>
