--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <a href="example/index.html">Example</a>
     <a href="phishing/index.html">Phishing</a>
     <a href="data_security/index.html">Data security</a>
-    <a href="1Virus/Main.html">Viruses</a>
+    <a href="1Virus/index.html">Viruses</a>
     <a href="encryption_poc/index.html">Encryption</a>
     <a href="ai_team1/index.html">AI Team 1</a>
   </div>
