--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <a href="1Virus/index.html">Viruses</a>
     <a href="encryption_poc/index.html">Encryption</a>
     <a href="ai_team1/index.html">AI Team 1</a>
+    <a href="Robotics/robotics.html">Robotics</a>
+    
+    
   </div>
   <div id="maincontent">
     <h1 style="text-align:center">IT and Society</h1>
