--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <a href="IAS2018/Virus/Main.html">Viruses</a>
     <a href="encryption_poc/index.html">Encryption</a>
     <a href="ai_team1/index.html">AI Team 1</a>
+    <a href="iPhonex/iPhoneX.html">iPhoneX</a>
   </div>
   <div id="maincontent">
     <h1 style="text-align:center">IT and Society</h1>
@@ -56,7 +57,7 @@
       <p><a href="http://www.plagiarism.org/article/how-do-i-cite-sources">
         How to cite sources</a></p>
     </div>
-  </div>  
+  </div>
 
 </body>
 </html>
